feat:修改数据地址

--- a/config/redis.yaml
+++ b/config/redis.yaml
@@ -1,6 +1,6 @@
 default:
-  Addr: 127.0.0.1:6379
-  Password: ""
+  Addr: project.dodream.wang:6379
+  Password: "dolphin"
   DB: 0
   MinIdleConn: 200
   DialTimeout: 60s
