feat:服务端配置和sql语句

--- a/config/database.yaml
+++ b/config/database.yaml
@@ -1,5 +1,5 @@
 Name: eagle                     # 数据库名称
-Addr: localhost:3306            # 如果是 docker,可以替换为 对应的服务名称，eg: db:3306
+Addr: 127.0.0.1:3306            # 如果是 docker,可以替换为 对应的服务名称，eg: db:3306
 UserName: root
 Password: 123456
 ShowLog: true                   # 是否打印所有SQL日志
