--- a/config/database.yaml
+++ b/config/database.yaml
@@ -1,4 +1,5 @@
 Name: eagle                     # 数据库名称
+# Addr: project.dodream.wang:3306            # 如果是 docker,可以替换为 对应的服务名称，eg: db:3306
 Addr: project.dodream.wang:3306            # 如果是 docker,可以替换为 对应的服务名称，eg: db:3306
 UserName: dolphin
 Password: dolphin
